; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_ipfw2.c_mark_printed.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_ipfw2.c_mark_printed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.show_state = type { i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.show_state*, i32*)* @mark_printed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_printed(%struct.show_state* %0, i32* %1) #0 {
  %3 = alloca %struct.show_state*, align 8
  %4 = alloca i32*, align 8
  store %struct.show_state* %0, %struct.show_state** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.show_state*, %struct.show_state** %3, align 8
  %6 = getelementptr inbounds %struct.show_state, %struct.show_state* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load %struct.show_state*, %struct.show_state** %3, align 8
  %10 = getelementptr inbounds %struct.show_state, %struct.show_state* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = ptrtoint i32* %8 to i64
  %15 = ptrtoint i32* %13 to i64
  %16 = sub i64 %14, %15
  %17 = sdiv exact i64 %16, 4
  %18 = getelementptr inbounds i32, i32* %7, i64 %17
  store i32 1, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
